--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -9,4 +9,14 @@
   padding: 25px 30px;
 
   background: #f5f5fc;
+
+  &__drop {
+    max-width: 100%;
+    width: 100%;
+    height: 83px;
+
+    &.active{
+      border: 2px dashed #e4e6f1;
+    }
+  }
 }
